[package]
name = "consentry"
version = "0.1.0"
authors = [
    "Sigma Prime <contact@sigmaprime.io>, Jonas Bostoen <j.bostoen@chainbound.io>",
]
edition = "2021"

[dependencies]
discv5 = { version = "0.1.0", features = ["libp2p"] }
unsigned-varint = { version = "0.6.0", features = ["codec"] }
types = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1"
eth2_ssz = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
slog = { version = "2.5.2", features = ["max_level_trace"] }
lighthouse_version = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
tokio = { version = "1.14.0", features = ["time", "macros"] }
tokio-stream = "0.1"
futures = "0.3.28"
error-chain = "0.12.4"
dirs = "3.0.1"
fnv = "1.0.7"
lazy_static = "1.4.0"
lighthouse_metrics = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
smallvec = "1.6.1"
tokio-io-timeout = "1.1.1"
lru = "0.7.1"
parking_lot = "0.12.0"
sha2 = "0.10"
snap = "1.0.1"
hex = "0.4.2"
tokio-util = { version = "0.6.2", features = ["codec", "compat", "time"] }
tiny-keccak = "2.0.2"
task_executor = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
rand = "0.8.5"
directory = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
regex = "1.5.5"
strum = { version = "0.24.0", features = ["derive"] }
superstruct = "0.5.0"
prometheus-client = "0.18.0"
unused_port = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
delay_map = "0.1.1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
metrics = "0.20"

[dependencies.libp2p]
version = "0.48.0"
default-features = false
features = [
    "websocket",
    "identify",
    "mplex",
    "yamux",
    "noise",
    "gossipsub",
    "dns-tokio",
    "tcp-tokio",
    "plaintext",
    "secp256k1",
]

# Some lighthouse patches
[patch.crates-io]
eth2_ssz = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_serde_utils = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }

tree_hash = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse", tag = "v4.0.1" }

[dev-dependencies]
slog-term = "2.6.0"
slog-async = "2.5.0"
tempfile = "3.1.0"
exit-future = "0.2.0"
void = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
libp2p-websocket = []
